--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,105 @@
-# Compiled class file
-*.class
+# =============================================================================
+# DRINKERIA PROJECT - GITIGNORE
+# =============================================================================
 
-# Log file
+# Build outputs and compiled files
+target/
+*/target/
+build/
+*/build/
+dist/
+*/dist/
+out/
+*/out/
+
+# Dependencies
+node_modules/
+*/node_modules/
+.pnpm-store/
+
+# Package manager files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.iml
+*.ipr
+*.iws
+.project
+.classpath
+.settings/
+.factorypath
+.springBeans
+.sts4-cache
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs and temporary files
 *.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+*.tmp
+*.temp
+.cache/
 
-# BlueJ files
-*.ctxt
+# Environment and config files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Maven specific
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-# Package Files #
+# Java specific
+*.class
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+
+# React/Vite specific
+dist-ssr/
+*.local
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Backup files
+*.bak
+*.backup
+
+# Coverage reports
+coverage/
+*.lcov
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Local documentation (keep local only)
+docs/
