--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "antd": "^5.27.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
